# scirs

./: .bencher.yml  .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SCIRS2_POLICY.md  TODO.md  deny.toml  docker-compose.yml  scirs2_0.1.0_press_release.md  tarpaulin.toml
benches/: Cargo.toml  README.md  V030_README.md  aggregate_v030_results.py  performance_baseline.json  regression_check.py  save_baseline.sh  v020_comprehensive_suite.rs  v020_gpu_comparison.rs  v020_memory_profiling.rs  v020_python_comparison.rs  v020_scalability.rs  v030_autograd_benchmarks.rs  v030_comprehensive_suite.rs  v030_fft_advanced_benchmarks.rs  v030_linalg_advanced_benchmarks.rs  v030_neural_benchmarks.rs  v030_optimize_cluster_benchmarks.rs  v030_run_all_benchmarks.sh  v030_series_benchmarks.rs  v030_signal_advanced_benchmarks.rs  v030_stats_ml_benchmarks.rs
benches/src/: lib.rs
scirs2-autograd/: Cargo.toml  README.md  TODO.md
scirs2-autograd/benches/: fusion_benchmarks.rs  memory_pool_bench.rs  simd_ops_bench.rs
scirs2-autograd/examples/: memory_pool_demo.rs
scirs2-autograd/src/: autodiff_enhanced.rs  checkpointing.rs  custom_grad.rs  custom_grad_advanced.rs  custom_gradient.rs  debugging.rs  diff_rules.rs  distributed_grad.rs  dynamic_graph.rs  forward_mode.rs  functional_api.rs  functional_transforms.rs  gradient.rs  gradient_accumulation.rs  graph_transforms.rs  graph_viz.rs  higher_order_advanced.rs  higher_order_new.rs  implicit_diff.rs  jacobian_ops.rs  jit_fusion.rs  jvp_vjp.rs  lazy_eval.rs  lib.rs  memory_pool.rs  mixed_precision.rs  ndarray_ext.rs  numerical_diff.rs  plain_optimizers.rs  profiling.rs  second_order.rs  tensor.rs  transforms.rs  variable.rs
scirs2-autograd/tests/: comprehensive_integration_tests.rs  edge_case_stress_tests.rs  fusion_integration_tests.rs  graph_optimization_tests.rs  optimization_tests.rs
scirs2-datasets/: Cargo.toml  README.md  TODO.md
scirs2-datasets/benches/: README.md
scirs2-datasets/examples/: scikit_learn_benchmark.rs
scirs2-datasets/src/: advanced_generators.rs  anomaly_benchmarks.rs  augmentation.rs  cache.rs  cloud.rs  distributed.rs  domain_specific.rs  explore.rs  external.rs  financial.rs  graph_benchmarks.rs  graph_datasets.rs  image_datasets.rs  imbalanced.rs  knowledge_graph_datasets.rs  lib.rs  medical_datasets.rs  ml_integration.rs  mnist_like.rs  parallel_preprocessing.rs  platform_dirs.rs  recommendation_datasets.rs  regression_benchmarks.rs  sampling.rs  synthetic_signals.rs  text_datasets.rs  time_series_benchmarks.rs  ts_datasets.rs  vision_datasets.rs
scirs2-datasets/tutorials/: 01_getting_started.md
scirs2-io/: Cargo.toml  README.md  TODO.md
scirs2-io/examples/: compression_example.rs  round_trip_example.rs
scirs2-io/fuzz/: Cargo.toml
scirs2-io/src/: arrow_ipc.rs  arrow_streaming.rs  binary_format.rs  binary_formats.rs  compression_utils.rs  enhanced_algorithms.rs  format_detect.rs  jsonl.rs  lib.rs  lineage.rs  metadata.rs  msgpack.rs  ndjson_streaming.rs  netcdf_lite.rs  parquet_lite.rs  protobuf_lite.rs  query.rs  realtime.rs  streaming_csv.rs  streaming_json.rs  toml_ext.rs  universal_reader.rs
scirs2-io/tests/: round_trip.rs  sqlite_integration.rs
scirs2-julia/: Cargo.toml
scirs2-julia/src/: lib.rs
scirs2-neural/: Cargo.toml  Cargo.toml.minimal  README.md  TODO.md
scirs2-neural/examples/: bidirectional_lstm_embedding.rs  convolutional_neural_network.rs  general_purpose_nn.rs  image_classification.rs
scirs2-neural/examples_disabled/: batchnorm_example.rs  bidirectional_lstm_embedding.rs  multimodal_neural_network.rs  recurrent_layers.rs  sentiment_analysis_rnn.rs  seq2seq_attention.rs  seq2seq_example.rs  text_generation_rnn.rs  transformer_translation.rs  unified_neural_network.rs
scirs2-neural/src/: augmentation.rs  distillation.rs  gradient_checkpointing.rs  lib.rs  prelude.rs  quantization.rs  serving.rs  tensor_ops.rs
scirs2-neural/tests/: integration_autograd.rs
scirs2-optim/: Cargo.toml  README.md
scirs2-python/: Cargo.toml  README.md  TODO.md  pyproject.toml  scirs2.pyi
scirs2-python/docs/: performance.md
scirs2-python/src/: async_ops.rs  autograd.rs  cluster.rs  datasets.rs  error.rs  fft.rs  graph.rs  integrate.rs  interpolate.rs  io.rs  lib.rs  linalg.rs  linalg_ext.rs  metrics.rs  ndimage.rs  neural.rs  optimize.rs  optimize_ext.rs  pandas_compat.rs  series.rs  signal.rs  signal_ext.rs  sparse.rs  spatial.rs  special.rs  text.rs  transform.rs  vision.rs
scirs2-python/tests/: test_async.py  test_autograd.py  test_datasets.py  test_graph.py  test_io.py  test_metrics.py  test_module_structure.py  test_ndimage.py  test_neural.py  test_pandas_compat.py  test_sparse.py  test_text.py  test_transform.py  test_vision.py
scirs2-stability-tests/: Cargo.toml
scirs2-stability-tests/benches/: numerical.rs
scirs2-stability-tests/src/: data_generators.rs  lib.rs  ml_properties.rs
scirs2-stability-tests/tests/: accuracy_regression.rs  api_stability.rs  compile_fail_tests.rs  ml_property_tests.rs  panic_resistance.rs
scirs2-stats/: Cargo.toml  README.md  TODO.md
scirs2-stats/benches/: accuracy_bench.rs  comprehensive_performance_benchmarks.rs  distributions_bench.rs
scirs2-stats/examples/: bayesian_regression.rs  tutorial_distributions.rs
scirs2-stats/src/: advanced_parallel_monte_carlo.rs  bootstrap.rs  cointegration.rs  compositional.rs  copula_extended.rs  copulas.rs  correlation_simd_enhanced.rs  dynamic_factor.rs  effect_size.rs  graphical_lasso.rs  hmm.rs  information.rs  intelligent_error_recovery.rs  kde.rs  lib.rs  mcmc_advanced.rs  memory_optimized_advanced.rs  multiple_testing.rs  nonparametric.rs  outlier_detection.rs  parallel_advanced_v3.rs  parallel_enhanced_advanced.rs  parallel_enhanced_v2.rs  parallel_enhanced_v4.rs  parallel_processing.rs  parallel_simd_stats.rs  quantum_advanced_broken.rs  robust.rs  robust_estimators.rs  sampling_simd.rs  scipy_benchmark_comparison.rs  simd_enhanced_advanced.rs  simd_enhanced_v5.rs  simd_enhanced_v6.rs  state_space.rs  (+6 more)
scirs2-wasm/: Cargo.toml  README.md  TODO.md  package.json
(+3462 files in other folders)
