[package]
name = "scirs2-julia"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Julia JLL-compatible shared library for SciRS2 - prebuilt binaries for Julia package installation"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/cool-japan/scirs"
documentation = "https://docs.rs/scirs2-julia"
keywords = ["julia", "jll", "scientific", "ffi", "bindings"]
categories = ["science", "mathematics", "external-ffi-bindings"]
publish = false

[lib]
name = "scirs2_julia"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core SciRS2 with FFI, linalg, stats, fft, and optimize features enabled
scirs2-core = { workspace = true, features = ["ffi", "linalg", "std", "array"] }

# Numerical types (no_std compatible)
num-traits = { workspace = true }
num-complex = { workspace = true }

# Error handling
thiserror = { workspace = true }

[features]
default = ["linalg", "stats", "fft", "optimize"]

# Feature flags mirror the Julia module domains
linalg   = []
stats    = []
fft      = ["scirs2-core/ffi"]
optimize = []

# Build all features (used by JLL packaging pipeline)
full = ["linalg", "stats", "fft", "optimize"]

[package.metadata.julia]
# JLL artifact name registered in the Julia General registry
jll_name = "SciRS2_jll"
# Minimum Julia version required
min_julia = "1.8"
# BinaryBuilder.jl product name
bb_product = "libscirs2_julia"
# Soname for linker
soname = "libscirs2_julia.so.0"
