# ⚠️ MOVED: This crate has been moved to the independent OptiRS project
#
# New location: https://github.com/cool-japan/optirs
# Use `optirs` crate instead of `scirs2-optim`

[package]
name = "scirs2-optim"
version = "0.1.5"
edition = "2021"
authors = ["SciRS2 Team"]
description = "⚠️ MOVED: This crate has been moved to the independent OptiRS project. Use 'optirs' crate instead."
license.workspace = true
repository = "https://github.com/cool-japan/optirs"
keywords = ["moved", "deprecated", "optimization", "optirs", "migration"]
categories = ["science"]
# Prevent this crate from being published since it's moved
publish = false

[dependencies]
# This crate is now empty - use OptiRS instead:
# optirs = "0.1.0"

[lib]
name = "scirs2_optim"
path = "src/lib.rs"

# Make this an independent package (not part of SciRS2 workspace)
[workspace]